Fixed bug of Scroll1 class showing on mobile version

--- a/style/home.css
+++ b/style/home.css
@@ -861,6 +861,9 @@ main {
   .gridcontainer {
     min-width: 100%;
   }
+  .scroll1 {
+    display: none;
+  }
 }
 @keyframes pulse {
   0% {
